added established date

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <meta name="description" content="MMM Construction Company">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel='shortcut icon' type='image/x-icon' href='https://i.postimg.cc/Zqxtn3Nb/logo.jpg' />
-    
+    <link rel="apple-touch-icon" sizes="128x128" href="https://i.postimg.cc/zG7p5RqY/logo.png">
+    <link rel="icon" sizes="192x192" href="https://i.postimg.cc/zG7p5RqY/logo.png">
  <!-- Stylesheets -->
      <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Tenali+Ramakrishna&display=swap">
@@ -187,7 +188,7 @@
       </div>
       <footer>
         <p class="mm-text-white mm-footer-text">
-          Copyright &copy; 2020 MMM Construction Company 
+          Copyright &copy; 1986 MMM Construction Company 
           . Owner: Sammy (Saeid) Mohajer-Mohassel
           License:#470086
         </p>
