fixed minor issues

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       
     <div class="mm-container">
       <div class="mm-text-white mm-page-header-container">
-        <img role="logo" class="logo" src="https://i.postimg.cc/zG7p5RqY/logo.png">
+        <img role="logo" class="logo" src="https://i.postimg.cc/zG7p5RqY/logo.png" width=400 height=400>
        <!---- <h1 class="mm-page-header">Chilling Cafe</h1> ---->
       </div>
       <div class="mm-content">
@@ -63,7 +63,8 @@
         <section class="mm-section mm-section-small">
           <h2 class="mm-section-header">About</h2>
           <p>
-           Thank you for visiting MMM Construction Company! MMM Construction is proudly located in Silicon Valley,CA and has expertise in both commercial and residential construction.
+              Thank you for visiting MMM Construction Company!</p>
+          <p> MMM Construction is proudly located in Silicon Valley,CA and has expertise in both commercial and residential construction.
           </p>
           <p class="mm-mb-0">
            <!--- you can add more text here --->
@@ -79,51 +80,51 @@
             <table>
               <tr>
                 <td class="mm-text-left">Additions</td>
+             <!--   <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td></td> -->
               </tr>
               <tr>
                 <td class="mm-text-left">Remodels</td>
+                      <!--   <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td></td> -->
               </tr>
               <tr>
                 <td class="mm-text-left">Full Builds</td>
+                      <!--   <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td></td> -->
               </tr>
               <tr>
                 <td class="mm-text-left">Custom Homes</td>
+                     <!--   <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td></td> -->
               </tr>
               <tr>
                 <td class="mm-text-left">Kitchens</td>
+                      <!--   <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td></td> -->
               </tr>
               <tr>
                 <td class="mm-text-left">Baths</td>
+                      <!--   <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td></td> -->
               </tr>
                 <tr>
                 <td class="mm-text-left">Retaining Walls</td>
+                      <!--   <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td></td> -->
               </tr>
                 <tr>
                 <td class="mm-text-left">Retrofitting</td>
+                      <!--   <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
+                <td></td> -->
               </tr>
             </table>
           </div>
